<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Just Java</string>
    <string name="button_text">ORDER</string>
    <string name="button_inc_text">+</string>
    <string name="button_dec_text">-</string>
    <string name="toppings">Toppings</string>
    <string name="thank_you">Thank you!</string>
    <string name="order_summary_name">Name:<xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="name">Name</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="initial_value">2</string>

</resources>
